<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bustamante.invoicetotal.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:id="@+id/subtotalLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:textColor="#011fff"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_percent"
        android:id="@+id/discountPercentLabel"
        android:layout_below="@+id/subtotalLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_amount"
        android:id="@+id/discountAmountLabel"
        android:layout_below="@+id/discountPercentLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:id="@+id/totalLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/discountAmountLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/subtotalEditText"
        android:layout_alignTop="@+id/subtotalLabel"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/discountPercentLabel"
        android:layout_toEndOf="@+id/discountPercentLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:id="@+id/discountPercentTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_alignTop="@+id/discountPercentLabel"
        android:layout_toRightOf="@+id/discountPercentLabel"
        android:layout_toEndOf="@+id/discountPercentLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:id="@+id/discountAmountTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/discountAmountLabel"
        android:layout_alignLeft="@+id/discountPercentTextView"
        android:layout_alignStart="@+id/discountPercentTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_value"
        android:id="@+id/totalTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/discountAmountLabel"
        android:layout_alignLeft="@+id/discountAmountTextView"
        android:layout_alignStart="@+id/discountAmountTextView" />
</RelativeLayout>
